<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kerani</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="navigation_drawer_open">Buka Navigation Drawer</string>
    <string name="navigation_drawer_close">Tutup Navigation Drawer</string>
    <string name="email">Email</string>
    <string name="input_email">Masukkan Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register_desc">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="email_required">Email harus diisi</string>
    <string name="password_required">Kata sandi minimal 6 karakter</string>
    <string name="password_hint">Masukkan Kata Sandi</string>
    <string name="login_desc">Sudah punya akun?</string>
    <string name="logout">Keluar</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string name="name">Nama</string>
    <string name="permission_denied">Akses Ditolak</string>
    <string name="settings">Pengaturan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_logout">Keluar</string>
    <string name="logout_success">Berhasil keluar</string>
    <string name="menu_edit">Edit Profil</string>
    <string name="menu_theme">Mode Gelap</string>
    <string name="menu_language">Bahasa (ID-EN)</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_history">Riwayat</string>
    <string name="login_success">Berhasil masuk</string>
    <string name="signin_success">Pendaftaran berhasil</string>
    <string name="kerani">Kerani</string>
    <string name="kerani_desc">Kerabat Tani</string>
    <string name="dropdown_desc">Pilih Tanaman:</string>
    <string name="diagnose">Diagnosa</string>
    <string name="dropdown_hint">Pilih Tanaman</string>
    <string name="photo_profile">photo_profile</string>
    <string name="require_hint">Perlu dilengkapi</string>
    <string name="phone">No. Telpon</string>
    <string name="address">Alamat</string>
    <string name="edit">Edit Profil</string>
    <string name="name_hint">Masukkan Nama</string>
    <string name="phone_hint">Masukkan No. Telepon</string>
    <string name="address_hint">Masukkan Alamat</string>
    <string name="save">Simpan</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Masukkan Bio</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="choose_photo_profile">Pilih foto profil</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="feature_unavailable">Fitur ini belum tersedia</string>
    <string name="name_required">Nama harus diisi</string>
    <string name="photo_required">Photo Profil harus diisi</string>
    <string name="result">Hasil:</string>
    <string name="result_value">Ambil foto terlebih dahulu</string>
    <string name="description">Deskripsi:</string>
    <string name="description_value">Description Value</string>
    <string name="treatment">Cara Penanganan:</string>
    <string name="treatment_value">Treatment Value</string>
    <string name="more">Selengkapnya</string>

    <string-array name="plants">
        <item>Kopi</item>
    </string-array>
</resources>