<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/profile_sheet">

    <TextView
        style="@style/Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo_profile"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="24sp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/ic_photo"
                    android:contentDescription="@string/camera" />

                <ImageView
                    android:id="@+id/gallery"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/ic_placeholder"
                    android:contentDescription="@string/gallery" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textSize="24sp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tv_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:textSize="24sp"
                    android:textAlignment="center"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>